--- a/src/MinecraftStatus/Views/Shared/_Layout.cshtml
+++ b/src/MinecraftStatus/Views/Shared/_Layout.cshtml
@@ -26,9 +26,6 @@
     </environment>
 
     <script src="~/js/site.js" asp-append-version="true"></script>
-    <script src="~/js/three.min.js"></script>
-    <script src="~/js/2dskin.js"></script>
-    <script src="~/js/viewer.js"></script>
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
@@ -48,7 +45,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; 2016 - Sakamoto Poteko</p>
+            <p>&copy; 2016 - <a href="https://github.com/sakamoto-poteko/MinecraftStatus">Sakamoto Poteko</a></p>
         </footer>
     </div>
 
