--- a/src/MinecraftStatus/Views/Shared/_Layout.cshtml
+++ b/src/MinecraftStatus/Views/Shared/_Layout.cshtml
@@ -6,13 +6,19 @@
     <title>@ViewData["Title"] - Minecraft Status</title>
 
     <!--CSS-->
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
-    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+    <environment names="Development">
+        <link rel="stylesheet" href="~/css/site.css" />
+    </environment>
+    <environment names="Staging,Production">
+        <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
+    </environment>
+    <link rel="stylesheet" href="~/css/bootstrap.min.css" />
 
     <!--JS-->
     <environment names="Development">
         <script src="~/lib/jquery/dist/jquery.js"></script>
         <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
+        <script src="~/js/site.js" asp-append-version="true"></script>
     </environment>
     <environment names="Staging,Production">
         <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-2.2.0.min.js"
@@ -23,9 +29,9 @@
                 asp-fallback-src="~/lib/bootstrap/dist/js/bootstrap.min.js"
                 asp-fallback-test="window.jQuery && window.jQuery.fn && window.jQuery.fn.modal">
         </script>
+        <script src="~/js/site.min.js" asp-append-version="true"></script>
     </environment>
 
-    <script src="~/js/site.js" asp-append-version="true"></script>
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
