--- a/src/MinecraftStatus/Views/Shared/_Layout.cshtml
+++ b/src/MinecraftStatus/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Minecraft Status</title>
+    <title>Minecraft Server Status</title>
 
     <!--CSS-->
     <environment names="Development">
@@ -51,7 +51,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; 2016 - <a href="https://github.com/sakamoto-poteko/MinecraftStatus">Sakamoto Poteko</a></p>
+            <p>&copy; 2017 - <a href="https://github.com/sakamoto-poteko/MinecraftStatus">Sakamoto Poteko</a></p>
         </footer>
     </div>
 
